[workspace]
members = []
resolver = "2"

[workspace.package]
authors = {{authors}}
description = {{project-name}}
homepage = "https://github.com/"{{- username -}}"/"{{- project-name -}}
repository = "https://github.com/"{{- username -}}"/"{{- project-name -}}
categories = []
documentation = ""
edition = "2021"
exclude = []
include = []
keywords = []
license = "MIT"
publish = false
readme = "./README.md"
rust-version = "1.72"
version = "0.1.0"

[workspace.dependencies]
